--- a/Done/TableViewCells/ViewStatusTableViewCell.xib
+++ b/Done/TableViewCells/ViewStatusTableViewCell.xib
@@ -141,7 +141,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3QU-MY-EWI">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3QU-MY-EWI">
                                 <rect key="frame" x="1" y="45" width="8" height="8"/>
                                 <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                 <constraints>
